--- a/public/chat.html
+++ b/public/chat.html
@@ -3,31 +3,31 @@
 <html>
   <head>
     <title>Chat App</title>
-    <link rel="icon" href="/img/favicon.png" />
-    <link rel="stylesheet" href="/css/styles.min.css" />
+    <link rel='icon' href='/img/favicon.png'>
+    <link rel='stylesheet' href='/css/styles.min.css'>
   </head>
 
   <body>
-    <div class="chat">
-      <div id='sidebar' class="chat__sidebar">
+    <div class='chat'>
+      <div id='sidebar' class='chat__sidebar'>
 
       </div>
-      <div class="chat__main">
-        <div id="messages" class="chat__messages">
+      <div class='chat__main'>
+        <div id='messages' class='chat__messages'>
             
         </div>
 
-        <div class="compose">
-          <form id="message-form">
-            <input name="message" placeholder="write your message" required autocomplete="off" oninvalid="setCustomValidity('Please enter a message.')"/>
+        <div class='compose'>
+          <form id='message-form'>
+            <input name='message' placeholder='write your message' required autocomplete='off' oninvalid="setCustomValidity('Please enter a message.')"/>
             <button>Send</button>
           </form>
-          <button id="sendLocation">Send Location</button>
+          <button id='send-location'>Send Location</button>
         </div>
       </div>
     </div>
 
-    <script id="message-template" type="text/html">
+    <script id='message-template' type='text/html'>
       <div class='message'>
           <p>
               <span class='message__name'>{{username}}</span>
@@ -37,7 +37,7 @@
       </div>
     </script>
 
-    <script id="location-message-template" type="text/html">
+    <script id='location-message-template' type='text/html'>
       <div class='message'>
         <p>
             <span class='message__name'>{{username}}</span>
@@ -58,10 +58,10 @@
     
     </script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/chat.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js'></script>
+    <script src='/socket.io/socket.io.js'></script>
+    <script src='js/chat.js'></script>
   </body>
 </html>
