--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,37 @@
   <head>
     <title>Chat App</title>
     <link rel="icon" href="/img/favicon.png" />
-    <link rel="stylesheet" href="/css/styles.min.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
 
   <body>
-   <div class='centered-form'>
-       <div class='centered-form__box'>
-            <h1>Join</h1>
-            <form action='/chat.html'>
-                <label>Display name</label>
-                <input type='text' name='username' placeholder='Display name' required oninvalid="setCustomValidity('Please enter username.')">
-                <label>Room</label>
-                <input type='text' name='room' placeholder='Room' required oninvalid="setCustomValidity('Please enter a room to join in.')">
-                <button>Join</button>
-            </form>
-       </div>
-   </div>
+    <div class="centered-form">
+      <div class="centered-form__box">
+        <h1>Join</h1>
+        <form id='join-form' action="/chat.html">
+          <label>Username</label>
+          <input type="text" name="username" placeholder="Username" required oninvalid="this.setCustomValidity('Please enter username.')"/>
+          <label>Room</label>
+          <div id="room-selection" class="center-form__selection"></div>
+          <div class='centered-form__new-room'>or type a new room to join in</div>
+          <input id='room' type="text" name="room" placeholder="Room" required oninvalid="this.setCustomValidity('Please enter a room to join in.')"/>
+          <button>Join</button>
+        </form>
+      </div>
+    </div>
+
+    <script id="room-selection-template" type="text/html">
+      <select id='selected-room' form="join-form" onchange="getSelectedRoom(event)">
+          <option value='' disabled selected>Select an existing room</option>
+          {{#rooms}}
+          <option value='{{.}}'>{{.}}</option>
+          {{/rooms}}
+      </select>
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
