--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
         <h1>Join</h1>
         <form id='join-form' action="/chat.html">
           <label>Username</label>
-          <input type="text" name="username" placeholder="Username" required oninvalid="this.setCustomValidity('Please enter username.')"/>
+          <input type="text" name="username" placeholder="Username" autocomplete='off' required oninvalid="this.setCustomValidity('Please enter username.')"/>
           <label>Room</label>
           <div id="room-selection" class="center-form__selection"></div>
           <div class='centered-form__new-room'>or type a new room to join in</div>
-          <input id='room' type="text" name="room" placeholder="Room" required oninvalid="this.setCustomValidity('Please enter a room to join in.')"/>
+          <input id='room' type="text" name="room" placeholder="Room" autocomplete='off' required oninvalid="this.setCustomValidity('Please enter a room to join in.')"/>
           <button>Join</button>
         </form>
       </div>
