--- a/public/chat.html
+++ b/public/chat.html
@@ -2,24 +2,19 @@
 
 <html>
   <head>
-    <title>Chat App</title>
+    <title>My Chat App</title>
     <link rel='icon' href='/img/favicon.png'>
-    <link rel='stylesheet' href='/css/styles.min.css'>
+    <link rel='stylesheet' href='/css/styles.css'>
   </head>
 
   <body>
     <div class='chat'>
-      <div id='sidebar' class='chat__sidebar'>
-
-      </div>
+      <div id='sidebar' class='chat__sidebar'></div>
       <div class='chat__main'>
-        <div id='messages' class='chat__messages'>
-            
-        </div>
-
+        <div id='messages' class='chat__messages'></div>
         <div class='compose'>
           <form id='message-form'>
-            <input name='message' placeholder='write your message' required autocomplete='off' oninvalid="setCustomValidity('Please enter a message.')"/>
+            <input name='message' placeholder='type your message' required autocomplete='off' oninvalid="setCustomValidity('Please enter a message.')"/>
             <button>Send</button>
           </form>
           <button id='send-location'>Send Location</button>
@@ -28,7 +23,7 @@
     </div>
 
     <script id='message-template' type='text/html'>
-      <div class='message'>
+      <div class='message {{#isOwnMessage}} message__own {{/isOwnMessage}}'>
           <p>
               <span class='message__name'>{{username}}</span>
               <span class='message__meta'>{{createdAt}}</span>
@@ -38,7 +33,7 @@
     </script>
 
     <script id='location-message-template' type='text/html'>
-      <div class='message'>
+      <div class='message {{#isOwnMessage}} message__own {{/isOwnMessage}}'>
         <p>
             <span class='message__name'>{{username}}</span>
             <span class='message__meta'>{{createdAt}}</span>
@@ -48,7 +43,7 @@
     </script>
 
     <script id='sidebar-template' type='text/html'>
-        <h2 class='room-title'>{{room}}</h2>
+        <h2 class='room-title'>Room <b>{{room}}</b></h2>
         <h3 class='list-title'>Users</h3>
         <ul class='users'>
             {{#users}}
