--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Chat App</title>
+    <title>My Chat App</title>
     <link rel="icon" href="/img/favicon.png" />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
@@ -10,13 +10,13 @@
   <body>
     <div class="centered-form">
       <div class="centered-form__box">
-        <h1>Join</h1>
+        <h1>Join a chat room</h1>
         <form id='join-form' action="/chat.html">
-          <label>Username</label>
+          <label>Your username</label>
           <input type="text" name="username" placeholder="Username" autocomplete='off' required oninvalid="this.setCustomValidity('Please enter username.')"/>
-          <label>Room</label>
+          <label>Choose a room</label>
           <div id="room-selection" class="center-form__selection"></div>
-          <div class='centered-form__new-room'>or type a new room to join in</div>
+          <label for='room'>or type a new room to join in</label>
           <input id='room' type="text" name="room" placeholder="Room" autocomplete='off' required oninvalid="this.setCustomValidity('Please enter a room to join in.')"/>
           <button>Join</button>
         </form>
@@ -24,7 +24,7 @@
     </div>
 
     <script id="room-selection-template" type="text/html">
-      <select id='selected-room' form="join-form" onchange="getSelectedRoom(event)">
+      <select id='selected-room' form="join-form" onchange="getSelectedRoom(event)" disabled="!rooms.length">
           <option id='placeholder-select' value='' disabled selected>Select an existing room</option>
           {{#rooms}}
           <option value='{{.}}'>{{.}}</option>
