--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,28 @@
 <html>
   <head>
     <title>My Chat App</title>
-    <link rel="icon" href="/img/favicon.png" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel='icon' href='/img/favicon.png' />
+    <link rel='stylesheet' href='/css/styles.css' />
   </head>
 
   <body>
-    <div class="centered-form">
-      <div class="centered-form__box">
+    <div class='centered-form'>
+      <div class='centered-form__box'>
         <h1>Join a chat room</h1>
-        <form id='join-form' action="/chat.html">
+        <form id='join-form' action='/chat.html'>
           <label>Your username</label>
-          <input type="text" name="username" placeholder="Username" autocomplete='off' required oninvalid="this.setCustomValidity('Please enter username.')"/>
+          <input type='text' name='username' placeholder='Username' autocomplete='off' required oninvalid='this.setCustomValidity('Please enter username.')'/>
           <label>Choose a room</label>
-          <div id="room-selection" class="center-form__selection"></div>
+          <div id='room-selection' class='center-form__selection'></div>
           <label for='room'>or type a new room to join in</label>
-          <input id='room' type="text" name="room" placeholder="Room" autocomplete='off' required oninvalid="this.setCustomValidity('Please enter a room to join in.')"/>
+          <input id='room' type='text' name='room' placeholder='Room' autocomplete='off' required oninvalid='this.setCustomValidity('Please enter a room to join in.')'/>
           <button>Join</button>
         </form>
       </div>
     </div>
 
-    <script id="room-selection-template" type="text/html">
-      <select id='selected-room' form="join-form" onchange="getSelectedRoom(event)" disabled="!rooms.length">
+    <script id='room-selection-template' type='text/html'>
+      <select id='selected-room' form='join-form' onchange='getSelectedRoom(event)' disabled='!rooms.length'>
           <option id='placeholder-select' value='' disabled selected>Select an existing room</option>
           {{#rooms}}
           <option value='{{.}}'>{{.}}</option>
@@ -32,9 +32,9 @@
       </select>
     </script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/index.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js'></script>
+    <script src='/socket.io/socket.io.js'></script>
+    <script src='js/index.js'></script>
   </body>
 </html>
