add switch camera button for touchable devices

--- a/public/chat.html
+++ b/public/chat.html
@@ -54,7 +54,9 @@
               <span class='tooltip'>stop </span>
             </button>
           </div>
-         
+          <button id='switch-camera' aria-label='click to switch the camera'>
+            switch <img src='/svg/camera.svg' alt='record video icon'/>
+          </button>
         </div>
       </div>
     </div>
