fix select element disable when there ar eno rooms

--- a/public/chat.html
+++ b/public/chat.html
@@ -14,7 +14,7 @@
         <div id='messages' class='chat__messages'></div>
         <div class='compose'>
           <form id='message-form'>
-            <input name='message' placeholder='type your message' required autocomplete='off' oninvalid='setCustomValidity('Please enter a message.')'/>
+            <input name='message' placeholder='type your message' required autocomplete='off' oninvalid="setCustomValidity('Please enter a message.')"/>
             <button aria-label='click to send your message'>
               <img src='/svg/share.svg' alt='send icon'/>
               <span class='tooltip'>send</span>
